[package]
name = "dsmr5"
description = "A no-std Rust implementation of the DSMR5 standard"
version = "0.4.0"
authors = ["Wouter Geraedts <wouter@tweedegolf.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/wassasin/dsmr5"
keywords = ["power", "meter", "dutch", "serial", "no_std"]
categories = ["no-std", "parser-implementations"]

[dependencies]
crc16 = "0.4"
serde = { version = "1", features = ["derive"], default-features = false }
